# rustyshim

./: .gitignore  Cargo.toml  README.md  example.json  sprint.txt  sprint.xml
py/: names.py  sdb.py  sdb_xml.py
sdbbuilder/: Cargo.toml
sdbbuilder/src/: main.rs
shim/: Cargo.toml
shim/src/: lib.rs
shimee/: Cargo.toml
shimee/src/: main.rs
shimlib/: Cargo.toml
shimlib/lib/: apphelp.def  apphelp.lib  generateLib.bat
shimlib/src/: defs.rs  errors.rs  lib.rs
