[workspace]
members = ["shimee", "sdbbuilder", "shimlib", "shim"]

[workspace.package]
version = "0.0.1"
authors = ["pathtofile"]
description = "RustyShim"
edition = "2021"

[workspace.dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security", 
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
]
