[package]
name = "sdbbuilder"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[dependencies]
shimlib = { path = "../shimlib" }
windows = { workspace = true }
serde_json = "1.0"
base64 = "0.13.0"
clap = { version = "4.0.18", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
